--- a/index.html
+++ b/index.html
@@ -72,34 +72,7 @@
           <div class="modal_head">
             <a class="close_btn closeModal">x</a>
           </div>
-          <div class="modal_form" id="modal_form">
-            <form id="frmPersonal" autocomplete="off">
-              <h2 class="tittle_form">Producto</h2>
-              <div class="cont_inputs_form">
-                <input
-                  type="text"
-                  name="name_product"
-                  id="name_product"
-                  placeholder="Nombre de Producto"
-                />
-              </div>
-              <div class="cont_inputs_form">
-                <input
-                  type="text"
-                  name="priceProduct"
-                  id="priceProduct"
-                  placeholder="Precio"
-                />
-                <input
-                  type="text"
-                  name="sctockProduct"
-                  id="sctockProduct"
-                  placeholder="Stock"
-                />
-              </div>
-              <button class="btn_form" type="submit">Registrar</button>
-            </form>
-          </div>
+          <div class="modal_form" id="modal_form"></div>
         </div>
       </div>
     </div>
