--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       src="https://kit.fontawesome.com/47b4aaa3bf.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Almacén</title>
   </head>
 
